    make them presentable.  Use irb or ruby -e instead.  Ruby Bug #549.
  * New recursive-descent parser for RDoc::Markup.  See RDoc::Markup::Parser
  * New ri data format using Marshal, prebuilt caches, improved merging
  * No support for old ri data format, too hard to maintain
  * Updated ruby_lex and ruby_token
  * Removed threading support, RDoc is not thread-safe.

* N Minor Enhancements
  * API enhancements for writing parsers like the Ruby parser, see
    RDoc::Parser::RubyTools
  * Uses pager over less and more for Debian.  Ruby Bug #1171.
  * ri will use the RI_PAGER environment variable to find a pager.
  * When rdoc is in debug mode, ^C now prints a backtrace
  * The ri data generator now supports SIGINFO (^T)
  * C parser now handles Document-method better.  Bug #27329.
  * RDoc::Markup::AttributeManager no longer uses global state.
  * RDoc::RDoc no longer passes around options.  Patch #27167.
  * Improved some wording for the RDoc main page.  Patch #27264, #27268.
  * Darkfish won't generate a file if its template is missing.  Patch #25857.
  * RDoc now supports module aliasing via constant assignment.
  * RDoc now tracks superclasses correctly.  Fixes File < IO for core docs.
  * RDoc now ignores methods inside methods.
  * RDoc now detects Marshal files as binray.
  * Removed "Skipping require of dynamic string" warning.
  * Removed diagram generation support (to return in the future).
  * Removed external support for RDoc::Task.

* N Bug Fixes
  * The :attr: directives now use the name given to create an attribute.  See
    RDoc::Parser::Ruby#parse_meta_attr.
  * Clean up circular require warnings on 1.9.
  * Fix crossrefs on paths with '-'.  Ruby Bug #883.
  * Fix ruby parser for alias with = in the name.  Bug #27522.
  * Images are no longer executable.  Bug #27156.
  * --op is no longer overridden by --ri.  Bug #27054.
  * :method: now works when at the end of a class.  Bug #26910.
  * Preserve elipsis from call-seq in Darkfish.  Patch #26974.