@@ -5,17 +5,31 @@ require 'rdoc'
 
 class RDoc::Stats
 
+  attr_reader :nodoc_classes
+  attr_reader :nodoc_constants
+  attr_reader :nodoc_methods
+  attr_reader :nodoc_modules
+
   attr_reader :num_classes
+  attr_reader :num_constants
   attr_reader :num_files
   attr_reader :num_methods
   attr_reader :num_modules
+
   attr_reader :total_files
 
   def initialize(total_files, verbosity = 1)
-    @num_classes = 0
-    @num_files   = 0
-    @num_methods = 0
-    @num_modules = 0
+    @nodoc_constants = 0
+    @nodoc_classes   = 0
+    @nodoc_methods   = 0
+    @nodoc_modules   = 0
+
+    @num_constants = 0
+    @num_classes   = 0
+    @num_files     = 0
+    @num_methods   = 0
+    @num_modules   = 0
+
     @total_files = total_files
 
     @start = Time.now
@@ -34,11 +48,19 @@ class RDoc::Stats
   def add_alias(as)
     @display.print_alias as
     @num_methods += 1
+    @nodoc_methods += 1 if as.document_self and as.comment.empty?
   end
 
   def add_class(klass)
     @display.print_class klass
     @num_classes += 1
+    @nodoc_classes += 1 if klass.document_self and klass.comment.empty?
+  end
+
+  def add_constant(constant)
+    @display.print_constant constant
+    @num_constants += 1
+    @nodoc_constants += 1 if constant.document_self and constant.comment.empty?
   end
 
   def add_file(file)
@@ -49,11 +71,13 @@ class RDoc::Stats
   def add_method(method)
     @display.print_method method
     @num_methods += 1
+    @nodoc_methods += 1 if method.document_self and method.comment.empty?
   end
 
   def add_module(mod)
     @display.print_module mod
     @num_modules += 1
+    @nodoc_modules += 1 if mod.document_self and mod.comment.empty?
   end
 
   def done_adding
@@ -61,11 +85,21 @@ class RDoc::Stats
   end
 
   def print
-    puts "Files:   #@num_files"
-    puts "Classes: #@num_classes"
-    puts "Modules: #@num_modules"
-    puts "Methods: #@num_methods"
-    puts "Elapsed: " + sprintf("%0.1fs", Time.now - @start)
+    items = @num_classes + @num_constants + @num_modules + @num_methods
+    doc_items = items -
+      @nodoc_classes - @nodoc_constants - @nodoc_modules - @nodoc_methods
+
+    percent_doc = doc_items.to_f / items * 100
+
+    puts "Files:     %5d" % @num_files
+    puts "Classes:   %5d (%5d undocumented)" % [@num_classes, @nodoc_classes]
+    puts "Constants: %5d (%5d undocumented)" %
+      [@num_constants, @nodoc_constants]
+    puts "Modules:   %5d (%5d undocumented)" % [@num_modules, @nodoc_modules]
+    puts "Methods:   %5d (%5d undocumented)" % [@num_methods, @nodoc_methods]
+    puts "%6.2f%% documented" % percent_doc
+    puts
+    puts "Elapsed: %0.1fs" % (Time.now - @start)
   end
 
   class Quiet
@@ -74,13 +108,14 @@ class RDoc::Stats
       @total_files = total_files
     end
 
-    def begin_adding(*) end
-    def print_alias(*) end
-    def print_class(*) end
-    def print_file(*) end
-    def print_method(*) end
-    def print_module(*) end
-    def done_adding(*) end
+    def begin_adding(*)   end
+    def print_alias(*)    end
+    def print_class(*)    end
+    def print_constant(*) end
+    def print_file(*)     end
+    def print_method(*)   end
+    def print_module(*)   end
+    def done_adding(*)    end
   end
 
   class Normal < Quiet
@@ -127,24 +162,36 @@ class RDoc::Stats
 
   class Verbose < Normal
 
-    def print_alias(as)
-      puts "\t\talias #{as.new_name} #{as.old_name}"
+    ##
+    # Returns a marker for RDoc::CodeObject +co+ being undocumented
+
+    def nodoc co
+      " (undocumented)" if co.document_self and co.comment.empty?
+    end
+
+    def print_alias as
+      puts "\t\talias #{as.new_name} #{as.old_name}#{nodoc as}"
     end
 
     def print_class(klass)
-      puts "\tclass #{klass.full_name}"
+      puts "\tclass #{klass.full_name}#{nodoc klass}"
+    end
+
+    def print_constant(constant)
+      puts "\t\t#{constant.name}#{nodoc constant}"
     end
 
     def print_file(files_so_far, file)
-      puts file
+      super
+      puts
     end
 
     def print_method(method)
-      puts "\t\t#{method.singleton ? '::' : '#'}#{method.name}"
+      puts "\t\t#{method.singleton ? '::' : '#'}#{method.name}#{nodoc method}"
     end
 
     def print_module(mod)
-      puts "\tmodule #{mod.full_name}"
+      puts "\tmodule #{mod.full_name}#{nodoc mod}"
     end
 
   end
